header and showcase edition

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -25,7 +25,7 @@
                 <li><a href="./index.html">Home</a></li>
                 <li><a href="#">Menu</a></li>
                 <li><a href="#">About</a></li>
-                <li><a href="#">Plans</a></li>
+                <li class="plans"><a href="#">Plans</a></li>
             </ul>
         </nav>
     </header>
@@ -37,6 +37,17 @@
 
         <div class="showcase-content">
             <img class="showcase-img" src="../Images/cappuccino.png" alt="Cappuccino">
+            <div class="showcase-description-container">
+                <p class="showcase-item-description">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Voluptatibus
+                    ea animi eveniet ad
+                    quaerat. At
+                    nesciunt doloribus voluptatibus perferendis, officia, excepturi mollitia asperiores officiis,
+                    repudiandae quisquam repellat reiciendis iste aliquid! Lorem, ipsum dolor sit amet consectetur
+                    adipisicing elit. Repudiandae deleniti optio eius at incidunt modi sed dignissimos necessitatibus
+                    repellat voluptatum, sit cum molestiae laboriosam architecto, itaque explicabo quisquam quas
+                    nostrum.</p>
+            </div>
         </div>
     </section>
 
