--- a/HTML/index.html
+++ b/HTML/index.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Coffee Shop | Home</title>
+    <meta name="description"
+        content="Welcome to The Coffee Shop! We specialize in serving the best coffee drinks you will ever find. Visit us for a cozy atmosphere and a delightful coffee experience.">
+    <meta name="keywords"
+        content="coffee, cafe, The Coffee Shop, beverages, espresso, cappuccino, latte, coffee shop, cozy cafe, coffeehouse">
 
     <!-- Icons and styles-->
     <script src="https://kit.fontawesome.com/1c689b6540.js" crossorigin="anonymous"></script>
@@ -17,8 +21,8 @@
     <header>
         <nav class="main-nav">
             <div class="branding">
-                <img class="title-img" src="../Images/logo.png" alt="logo: a cup of hot coffee">
-                <a href="./index.html" class="title">The Coffee Shop</a>
+                <img class="title-img" src="../Images/logo.png" alt="Website logo: A cup of hot coffee.">
+                <h1><a href="./index.html" class="title">The Coffee Shop</a></h1>
             </div>
 
             <ul class="main-nav-list">
@@ -30,43 +34,47 @@
         </nav>
     </header>
 
-    <section class="showcase">
-        <div class="showcase-title-container">
-            <h3 class="showcase-title">Welcome to <span class="highlight-one">The Coffee Shop</span></h3>
-        </div>
-
-        <div class="showcase-content">
-            <img class="showcase-img" src="../Images/cappuccino.png" alt="Cappuccino">
-
-            <div class="showcase-description-container">
-                <h3 class="drink-title"><i class="fa-solid fa-mug-hot"></i> Cappuccino</h3>
-
-                <p class="showcase-item-description">A cappuccino is a beloved Italian coffee classic, known for its
-                    exquisite balance of espresso,
-                    steamed milk, and velvety milk foam. At <span class="highlight-two">The Coffee Shop</span>, we
-                    create
-                    cappuccinos that are a true work
-                    of
-                    art. Each begins with a shot of rich espresso, followed by an equal amount of beautifully
-                    steamed milk. <br><br> The crowning glory is a thick layer of lush milk foam, resulting in a
-                    harmonious blend of intense coffee flavor and luxurious creaminess. Cappuccinos are the perfect
-                    choice for those seeking a delightful coffee experience that's both bold and indulgent.</p>
+    <main>
+        <section class="showcase">
+            <div class="showcase-title-container">
+                <h3 class="showcase-title">Welcome to <span class="highlight-one">The Coffee Shop</span> website!</h3>
             </div>
 
-            <div class="showcase-slider">
-                <i class="showcase-slider-button fa fa-chevron-left"></i>
+            <div class="showcase-content">
+                <img class="showcase-img" src="../Images/cappuccino.png"
+                    alt="Slide one image: Delicious creamy Cappuccino.">
 
-                <ul class="showcase-slides">
-                    <li class="showcase-slide checked"><input type="radio" id="slide-one" name="showcase-slide"></li>
-                    <li class="showcase-slide"><input type="radio" id="slide-two" name="showcase-slide"></li>
-                    <li class="showcase-slide"><input type="radio" id="slide-three" name="showcase-slide"></li>
-                    <li class="showcase-slide"><input type="radio" id="slide-four" name="showcase-slide"></li>
-                </ul>
+                <div class="showcase-description-container">
+                    <h3 class="drink-title"><i class="fa-solid fa-mug-hot"></i> Cappuccino</h3>
 
-                <i class="showcase-slider-button fa fa-chevron-right"></i>
+                    <p class="showcase-item-description">Is a beloved Italian coffee classic, known for its
+                        exquisite balance of espresso,
+                        steamed milk, and velvety milk foam. At <span class="highlight-two">The Coffee Shop</span>, we
+                        create
+                        cappuccinos that are a true work
+                        of
+                        art. Each begins with a shot of rich espresso, followed by an equal amount of beautifully
+                        steamed milk. <br><br> The crowning glory is a thick layer of lush milk foam, resulting in a
+                        harmonious blend of intense coffee flavor and luxurious creaminess. Cappuccinos are the perfect
+                        choice for those seeking a delightful coffee experience that's both bold and indulgent.</p>
+                </div>
+
+                <div class="showcase-slider">
+                    <i class="showcase-slider-button fa fa-chevron-left"></i>
+
+                    <ul class="showcase-slides">
+                        <li class="showcase-slide checked"><input type="radio" id="slide-one" name="showcase-slide">
+                        </li>
+                        <li class="showcase-slide"><input type="radio" id="slide-two" name="showcase-slide"></li>
+                        <li class="showcase-slide"><input type="radio" id="slide-three" name="showcase-slide"></li>
+                        <li class="showcase-slide"><input type="radio" id="slide-four" name="showcase-slide"></li>
+                    </ul>
+
+                    <i class="showcase-slider-button fa fa-chevron-right"></i>
+                </div>
             </div>
-        </div>
-    </section>
+        </section>
+    </main>
 
     <footer>
         <nav class="footer-nav">
@@ -104,6 +112,8 @@
             <h4 class="copy-message">&copy; Copyright 2024 | <span class="highlight-one">The Coffee Shop</span></h4>
         </nav>
     </footer>
+
+    <button onclick="goToTop()" class="scrollToTopButton" title="Go to top"><i class="fa fa-chevron-up"></i></button>
 
     <script src="../JS/main-script.js"></script>
 </body>
