--- a/HTML/index.html
+++ b/HTML/index.html
@@ -26,7 +26,7 @@
             </div>
 
             <ul class="main-nav-list">
-                <li><a href="./index.html">Home</a></li>
+                <li><a aria-current="page" href="./index.html">Home</a></li>
                 <li><a href="#">Menu</a></li>
                 <li><a href="#">About</a></li>
                 <li class="plans"><a href="#">Plans</a></li>
@@ -80,7 +80,7 @@
         <nav class="footer-nav">
             <div class="footer-nav-lists">
                 <ul class="footer-nav-list">
-                    <li><a href="./index.html">Home</a></li>
+                    <li><a aria-current="page" href="./index.html">Home</a></li>
                     <li><a href="#">Menu</a></li>
                     <li><a href="#">About</a></li>
                     <li><a href="#">Plans</a></li>
@@ -113,7 +113,12 @@
         </nav>
     </footer>
 
-    <button onclick="goToTop()" class="scrollToTopButton" title="Go to top"><i class="fa fa-chevron-up"></i></button>
+    <!-- Scrolling control buttons -->
+    <section class="controls">
+        <button onclick="goToTop()" class="scrollBtn" title="Go to top"><i class="fa fa-chevron-up"></i></button>
+        <button onclick="goToBottom()" class="scrollBtn active" title="Go to bottom"><i
+                class="fa fa-chevron-down"></i></button>
+    </section>
 
     <script src="../JS/main-script.js"></script>
 </body>
