set main navbar to fixed

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -60,7 +60,9 @@
                 </div>
 
                 <div class="showcase-slider">
-                    <i class="showcase-slider-button fa fa-chevron-left"></i>
+                    <button class="showcase-slider-button">
+                        <i class="fa fa-chevron-left"></i>
+                    </button>
 
                     <ul class="showcase-slides">
                         <li class="showcase-slide checked"><input type="radio" id="slide-one" name="showcase-slide">
@@ -70,7 +72,9 @@
                         <li class="showcase-slide"><input type="radio" id="slide-four" name="showcase-slide"></li>
                     </ul>
 
-                    <i class="showcase-slider-button fa fa-chevron-right"></i>
+                    <button class="showcase-slider-button">
+                        <i class="fa fa-chevron-right"></i>
+                    </button>
                 </div>
             </div>
         </section>
