--- a/HTML/index.html
+++ b/HTML/index.html
@@ -78,6 +78,70 @@
                 </div>
             </div>
         </section>
+
+        <section class="drinks">
+            <div class="drinks-title-container">
+                <h3 class="drinks-title">Wanna take a look at some of our best drinks?</h3>
+            </div>
+
+            <div class="drinks-content">
+                <ul class="drinks-list">
+                    <li class="drink">
+                        <h3 class="drink-title">Americano</h3>
+                        <img src="../Images/americano.png" alt="Americano coffee drink.">
+                        <p class="drink-description">Savor the rich, bold flavors of our meticulously crafted Americano
+                            coffee, a quintessential favorite among coffee connoisseurs.</p>
+                        <p class="drink-description">Our Americano starts with a foundation of premium, carefully
+                            selected Arabica beans, sourced
+                            from the world's finest coffee regions. Each batch is expertly roasted to perfection,
+                            unlocking a symphony of flavors that dance on your palate with every sip.
+                        </p>
+                    </li>
+
+                    <li class="drink">
+                        <h3 class="drink-title">Latte</h3>
+                        <img src="../Images/latte.png" alt="Latte coffee drink.">
+                        <p class="drink-description">Indulge in the epitome of coffee elegance with our exquisite Latte,
+                            a masterpiece crafted to captivate your senses and elevate your coffee experience.</p>
+
+                        <p class="drink-description">Immerse yourself in the velvety embrace of perfectly steamed milk,
+                            expertly blended with
+                            rich, aromatic espresso sourced from the finest Arabica beans. Each sip unfolds a delicate
+                            balance of creamy sweetness and robust espresso notes, harmoniously intertwined to create a
+                            symphony of flavor that lingers on your palate.
+                        </p>
+                    </li>
+
+                    <li class="drink">
+                        <h3 class="drink-title">Macchiato</h3>
+                        <img src="../Images/coffee-machiatto.png" alt="Macchiato coffee drink.">
+                        <p class="drink-description">Embark on a journey of refined taste and exquisite craftsmanship
+                            with our distinguished Macchiato, a testament to the artistry of coffee-making.</p>
+
+                        <p class="drink-description">A harmonious blend of velvety espresso and delicately frothed milk,
+                            our Macchiato is a
+                            masterpiece of balance and flavor. With each sip, experience the perfect marriage of bold
+                            espresso intensity and creamy smoothness, delicately accented by a touch of frothy
+                            sweetness.
+                        </p>
+                    </li>
+
+                    <li class="drink">
+                        <h3 class="drink-title">Lungo</h3>
+                        <img src="../Images/lungo.png" alt="Lungo coffee drink.">
+                        <p class="drink-description">Unveil the depths of coffee complexity with our distinguished
+                            Lungo, a testament to the bold and unyielding spirit of true coffee aficionados.</p>
+
+                        <p class="drink-description">Experience the unparalleled intensity of our Lungo, crafted from
+                            the finest Arabica beans
+                            sourced from the world's most renowned coffee estates. Delve into a sensory adventure as
+                            each sip reveals layers of robust flavor, enveloping your palate in a rich tapestry of depth
+                            and character.
+                        </p>
+                    </li>
+                </ul>
+            </div>
+        </section>
     </main>
 
     <!-- Scrolling control buttons -->
