--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script src="https://kit.fontawesome.com/1c689b6540.js" crossorigin="anonymous"></script>
     <link rel="icon" type="image/x-icon" href="/images/logo.png">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="../CSS/main-styles.css">
+    <link rel="stylesheet" href="./CSS/main-styles.css">
 </head>
 
 <body>
