--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <!-- Icons and styles-->
     <script src="https://kit.fontawesome.com/1c689b6540.js" crossorigin="anonymous"></script>
-    <link rel="icon" type="image/x-icon" href="/images/logo.png">
+    <link rel="icon" type="image/x-icon" href="./Images/logo.png">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="./CSS/main-styles.css">
 </head>
@@ -21,7 +21,7 @@
     <header>
         <nav class="main-nav">
             <div class="branding">
-                <img class="title-img" src="../Images/logo.png" alt="Website logo: A cup of hot coffee.">
+                <img class="title-img" src="./Images/logo.png" alt="Website logo: A cup of hot coffee.">
                 <h1><a href="./" class="title">The Coffee Shop</a></h1>
             </div>
 
@@ -46,7 +46,7 @@
             </div>
 
             <div class="content">
-                <img class="slide-img" src="../Images/cappuccino.png"
+                <img class="slide-img" src="./Images/cappuccino.png"
                     alt="Slide one image: Delicious creamy Cappuccino.">
 
                 <div class="slide-description-container">
@@ -94,7 +94,7 @@
                 <ul class="drinks-list">
                     <li class="drink">
                         <h3 class="drink-title">Americano</h3>
-                        <img src="../Images/americano.png" alt="Americano coffee drink.">
+                        <img src="./Images/americano.png" alt="Americano coffee drink.">
 
                         <div class="drink-description">
                             <p>Savor the rich, bold flavors of our meticulously crafted
@@ -113,7 +113,7 @@
 
                     <li class="drink">
                         <h3 class="drink-title">Latte</h3>
-                        <img src="../Images/latte.png" alt="Latte coffee drink.">
+                        <img src="./Images/latte.png" alt="Latte coffee drink.">
 
                         <div class="drink-description">
                             <p>Indulge in the epitome of coffee elegance with our exquisite
@@ -136,7 +136,7 @@
 
                     <li class="drink">
                         <h3 class="drink-title">Macchiato</h3>
-                        <img src="../Images/coffee-machiatto.png" alt="Macchiato coffee drink.">
+                        <img src="./Images/coffee-machiatto.png" alt="Macchiato coffee drink.">
 
                         <div class="drink-description">
                             <p>Embark on a journey of refined taste and exquisite
@@ -159,7 +159,7 @@
 
                     <li class="drink">
                         <h3 class="drink-title">Lungo</h3>
-                        <img src="../Images/lungo.png" alt="Lungo coffee drink.">
+                        <img src="./Images/lungo.png" alt="Lungo coffee drink.">
 
                         <div class="drink-description">
                             <p class="drink-description">Unveil the depths of coffee complexity with our distinguished
