--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
         </nav>
     </footer>
 
-    <script src="../JS/main-script.js"></script>
+    <script src="./JS/main-script.js"></script>
 </body>
 
 </html>
