Added a slideshow for the showcase section with autoplay

--- a/index.html
+++ b/index.html
@@ -42,46 +42,155 @@
     <main>
         <section class="showcase">
             <div class="section-title-container">
-                <h3 class="section-title">Welcome to <span class="highlight-one">The Coffee Shop</span> website!</h3>
+                <h3 class="section-title">Welcome to <span class="highlight-one">The Coffee Shop</span>!</h3>
             </div>
 
-            <div class="content">
-                <img class="slide-img" src="./Images/cappuccino.png"
-                    alt="Slide one image: Delicious creamy Cappuccino.">
+            <div class="slides">
+                <div class="slide active">
+                    <img class="slide-img" src="./Images/cappuccino.png"
+                        alt="Slide one image: Delicious creamy Cappuccino.">
 
-                <div class="slide-description-container">
-                    <h3 class="slide-title"><i class="fa-solid fa-mug-hot"></i> Cappuccino</h3>
+                    <div class="slide-description-container">
+                        <h3 class="slide-title"><i class="fa-solid fa-mug-hot"></i> Cappuccino</h3>
 
-                    <p class="slide-description">Is a beloved Italian coffee classic, known for its
-                        exquisite balance of espresso,
-                        steamed milk, and velvety milk foam. At <span class="highlight-two">The Coffee Shop</span>, we
-                        create
-                        cappuccinos that are a true work
-                        of
-                        art. Each begins with a shot of rich espresso, followed by an equal amount of beautifully
-                        steamed milk. <br><br> The crowning glory is a thick layer of lush milk foam, resulting in a
-                        harmonious blend of intense coffee flavor and luxurious creaminess. Cappuccinos are the perfect
-                        choice for those seeking a delightful coffee experience that's both bold and indulgent.</p>
+                        <p class="slide-description">Is a beloved Italian coffee classic, known for its
+                            exquisite balance of espresso,
+                            steamed milk, and velvety milk foam. At <span class="highlight-two">The Coffee Shop</span>,
+                            we
+                            create
+                            cappuccinos that are a true work
+                            of
+                            art. Each begins with a shot of rich espresso, followed by an equal amount of beautifully
+                            steamed milk.
+                        </p>
+
+                        <p class="slide-description">The crowning glory is a thick layer of lush milk foam, resulting in
+                            a
+                            harmonious blend of intense coffee flavor and luxurious creaminess. Cappuccinos are the
+                            perfect
+                            choice for those seeking a delightful coffee experience that's both bold and indulgent.
+                        </p>
+
+                        <p class="slide-description">
+                            Whether you're seeking a morning pick-me-up or a luxurious afternoon indulgence, our
+                            cappuccinos
+                            offer a sublime balance of boldness and decadence. With each sip, you'll discover why the
+                            cappuccino has earned its place as a timeless classic, cherished by coffee aficionados
+                            around
+                            the world. Experience the magic of the cappuccino at <span class=highlight-two>The Coffee
+                                Shop</span> today.
+                        </p>
+                    </div>
                 </div>
 
-                <div class="slider">
-                    <button class="slider-button">
-                        <i class="fa fa-chevron-left"></i>
-                    </button>
+                <div class="slide">
+                    <img class="slide-img" src="./Images/affogato.jpg"
+                        alt="Slide one image: Delicious Affogato desert.">
 
-                    <ul class="slide-indicators">
-                        <li class="slide-indicator checked" aria-current="step"><input type="radio" id="slide-one"
-                                name="showcase-slide">
-                        </li>
-                        <li class="slide-indicator"><input type="radio" id="slide-two" name="showcase-slide"></li>
-                        <li class="slide-indicator"><input type="radio" id="slide-three" name="showcase-slide"></li>
-                        <li class="slide-indicator"><input type="radio" id="slide-four" name="showcase-slide"></li>
-                    </ul>
+                    <div class="slide-description-container">
+                        <h3 class="slide-title"><i class="fa-solid fa-mug-hot"></i> Affogato</h3>
 
-                    <button class="slider-button">
-                        <i class="fa fa-chevron-right"></i>
-                    </button>
+                        <p class="slide-description">Dive into the sublime simplicity of our Affogato, a decadent
+                            Italian delight that marries the rich flavors of espresso with the creamy indulgence of
+                            gelato. At <span class=highlight-two>The Coffee
+                                Shop</span>, we invite you to experience the exquisite harmony of contrasting
+                            textures and temperatures in this unforgettable dessert.
+                        </p>
+
+                        <p class="slide-description">Picture this: a scoop of velvety, artisanal gelato, lovingly
+                            crafted from the finest ingredients, nestled in a delicate pool of freshly brewed espresso.
+                            As the espresso cascades over the creamy gelato, it creates a symphony of flavors that dance
+                            upon your palate, tantalizing your taste buds with each luxurious spoonful.
+                        </p>
+
+                        <p class="slide-description">
+                            Whether enjoyed as a dessert after a sumptuous meal or as a delightful afternoon treat, our
+                            Affogato promises to delight and satisfy even the most discerning of palates. Elevate your
+                            dessert experience with the Affogato at <span class=highlight-two>The Coffee
+                                Shop</span>, where every spoonful
+                            is a journey to culinary bliss.
+                        </p>
+                    </div>
                 </div>
+
+                <div class="slide">
+                    <img class="slide-img" src="./Images/mocha.jpg" alt="Slide one image: Delicious Mocha with foam.">
+
+                    <div class="slide-description-container">
+                        <h3 class="slide-title"><i class="fa-solid fa-mug-hot"></i> Mocha</h3>
+
+                        <p class="slide-description">
+                            Indulge in the captivating allure of our signature Mocha, a decadent fusion of rich
+                            espresso, velvety chocolate, and creamy steamed milk, meticulously crafted to tantalize your
+                            taste buds and awaken your senses.
+                        </p>
+
+                        <p class="slide-description">At <span class=highlight-two>The Coffee
+                                Shop</span>, our Mocha is a celebration of exquisite flavors
+                            and unparalleled indulgence. Each sip unveils a symphony of sensations, from the bold
+                            intensity of freshly brewed espresso to the luscious sweetness of premium chocolate,
+                            harmoniously balanced by the silky smoothness of expertly steamed milk.
+                        </p>
+
+                        <p class="slide-description">
+                            Whether you're seeking a delightful morning pick-me-up or a luxurious treat to savor
+                            throughout the day, our Mocha promises to delight even the most discerning coffee
+                            enthusiasts. Experience the perfect marriage of coffee and chocolate in every sip, and let
+                            the rich aroma and decadent flavors of our Mocha transport you to a world of pure indulgence
+                            and delight.
+                        </p>
+                    </div>
+                </div>
+
+                <div class="slide">
+                    <img class="slide-img" src="./Images/doppio.jpg"
+                        alt="Slide four image: Pouring a hot and delicious Doppio coffee into a cup.">
+
+                    <div class="slide-description-container">
+                        <h3 class="slide-title"><i class="fa-solid fa-mug-hot"></i> Doppio</h3>
+
+                        <p class="slide-description">Step into a realm of pure coffee bliss with our Doppio, a double
+                            shot of intense espresso crafted to satisfy the cravings of true coffee aficionados.
+                        </p>
+
+                        <p class="slide-description">At <span class=highlight-two>The Coffee
+                                Shop</span>, our Doppio is a testament to the essence of
+                            espresso &ndash; bold, robust, and bursting with flavor. Made from the finest Arabica beans,
+                            each
+                            double shot is meticulously brewed to perfection, extracting the full depth and complexity
+                            of the coffee beans.
+                        </p>
+
+                        <p class="slide-description">
+                            With its rich aroma and unparalleled intensity, our Doppio is the perfect choice for those
+                            who crave the pure essence of coffee. Whether enjoyed as a quick morning jolt or a midday
+                            indulgence, our Doppio promises to awaken your senses and invigorate your day with its bold
+                            flavor and unmistakable character. Experience the true essence of espresso with every sip of
+                            our Doppio, and embark on a journey of unparalleled coffee satisfaction at <span
+                                class=highlight-two>The Coffee
+                                Shop</span>.
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="slider">
+                <button class="slider-button">
+                    <i class="fa fa-chevron-left"></i>
+                </button>
+
+                <ul class="slide-indicators">
+                    <li class="slide-indicator checked" aria-current="step"><input type="radio" id="slide-one"
+                            name="showcase-slide">
+                    </li>
+                    <li class="slide-indicator"><input type="radio" id="slide-two" name="showcase-slide"></li>
+                    <li class="slide-indicator"><input type="radio" id="slide-three" name="showcase-slide"></li>
+                    <li class="slide-indicator"><input type="radio" id="slide-four" name="showcase-slide"></li>
+                </ul>
+
+                <button class="slider-button">
+                    <i class="fa fa-chevron-right"></i>
+                </button>
             </div>
         </section>
 
