More animations to the drinks lists

--- a/index.html
+++ b/index.html
@@ -196,7 +196,8 @@
 
         <section class="drinks">
             <div class="drinks-title-container">
-                <h3 class="drinks-title">Wanna see some of our most delicious drinks?</h3>
+                <h3 class="drinks-title">Wanna see some of our most <span class="highlight-three">delicious</span>
+                    drinks?</h3>
             </div>
 
             <div class="drinks-content">
