Implemented functionality for showcase slider buttons

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
             </div>
 
             <div class="slider">
-                <button class="slider-button" onclick="prevSlide()" aria-label="Previous slide">
+                <button class="slider-button prev" aria-label="Previous slide">
                     <i class="fa fa-chevron-left" aria-hidden="true"></i>
                 </button>
 
@@ -188,7 +188,7 @@
                     <li class="slide-indicator"><input type="radio" id="slide-four" name="showcase-slide"></li>
                 </ul>
 
-                <button class="slider-button" onclick="nextSlide()" aria-label="Next slide">
+                <button class="slider-button next" aria-label="Next slide">
                     <i class="fa fa-chevron-right" aria-hidden="true"></i>
                 </button>
             </div>
