--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <li class="plans"><a href="#" aria-label="Plans page">Plans</a></li>
             </ul>
 
-            <button class="hamburger-menu">
+            <button class="hamburger-menu closed">
                 <i class="fa fa-bars" aria-hidden="true"></i>
             </button>
         </nav>
