Updated the navbar

--- a/index.html
+++ b/index.html
@@ -26,10 +26,14 @@
             </div>
 
             <ul class="main-nav-list">
-                <li><a href="./" aria-current="page" aria-label="Homepage">Home</a></li>
-                <li><a href="#" aria-label="Drinks menu page">Menu</a></li>
-                <li><a href="#" aria-label="About page">About</a></li>
-                <li class="plans"><a href="#" aria-label="Plans page">Plans</a></li>
+                <li><a href="./" aria-current="page" aria-label="Homepage"><i class="fa fa-home"
+                            aria-hidden="true"></i>Home</a></li>
+                <li><a href="#" aria-label="Drinks menu page"><i class="fa fa-cutlery" aria-hidden="true"></i>Menu</a>
+                </li>
+                <li><a href="#" aria-label="About page"><i class="fa fa-info-circle" aria-hidden="true"></i>About</a>
+                </li>
+                <li class="plans"><a href="#" aria-label="Plans page"><i class="fa fa-diamond"
+                            aria-hidden="true"></i>Plans</a></li>
             </ul>
 
             <button class="hamburger-menu closed">
