Some CSS and HTML improvements

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <!-- Icons and styles-->
     <script src="https://kit.fontawesome.com/1c689b6540.js" crossorigin="anonymous"></script>
-    <link rel="icon" type="image/x-icon" href="./Images/logo.png">
+    <link rel="icon" type="image/x-icon" href="./assets/logo.png">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="./CSS/main-styles.css">
 </head>
@@ -21,7 +21,7 @@
     <header>
         <nav class="main-nav">
             <div class="branding">
-                <img class="title-img" src="./Images/logo.png" alt="Website logo: A cup of hot coffee.">
+                <img class="title-img" src="./assets/logo.png" alt="Website logo: A cup of hot coffee.">
                 <h1><a href="./" class="title">The Coffee Shop</a></h1>
             </div>
 
@@ -51,7 +51,7 @@
 
             <div class="slides">
                 <div class="slide active">
-                    <img class="slide-img" src="./Images/cappuccino.png"
+                    <img class="slide-img" src="./assets/cappuccino.png"
                         alt="Slide one image: Delicious creamy Cappuccino.">
 
                     <div class="slide-description-container">
@@ -70,7 +70,7 @@
                 </div>
 
                 <div class="slide">
-                    <img class="slide-img" src="./Images/affogato.jpg"
+                    <img class="slide-img" src="./assets/affogato.jpg"
                         alt="Slide one image: Delicious Affogato desert.">
 
                     <div class="slide-description-container">
@@ -86,7 +86,7 @@
                 </div>
 
                 <div class="slide">
-                    <img class="slide-img" src="./Images/mocha.jpg" alt="Slide one image: Delicious Mocha with foam.">
+                    <img class="slide-img" src="./assets/mocha.jpg" alt="Slide one image: Delicious Mocha with foam.">
 
                     <div class="slide-description-container">
                         <h3 class="slide-title"><i class="fa-solid fa-mug-hot"></i> Mocha</h3>
@@ -100,7 +100,7 @@
                 </div>
 
                 <div class="slide">
-                    <img class="slide-img" src="./Images/doppio.jpg"
+                    <img class="slide-img" src="./assets/doppio.jpg"
                         alt="Slide four image: Pouring a hot and delicious Doppio coffee into a cup.">
 
                     <div class="slide-description-container">
@@ -123,12 +123,10 @@
                 </button>
 
                 <ul class="slide-indicators">
-                    <li class="slide-indicator checked" aria-current="step"><input type="radio" id="slide-one"
-                            name="showcase-slide">
-                    </li>
-                    <li class="slide-indicator"><input type="radio" id="slide-two" name="showcase-slide"></li>
-                    <li class="slide-indicator"><input type="radio" id="slide-three" name="showcase-slide"></li>
-                    <li class="slide-indicator"><input type="radio" id="slide-four" name="showcase-slide"></li>
+                    <li class="slide-indicator checked" aria-current="step"></li>
+                    <li class="slide-indicator"></li>
+                    <li class="slide-indicator"></li>
+                    <li class="slide-indicator"></li>
                 </ul>
 
                 <button class="slider-button next" aria-label="Next slide">
@@ -138,7 +136,7 @@
         </section>
 
         <section class="drinks">
-            <div class="drinks-title-container">
+            <div class="section-title-container">
                 <h3 class="drinks-title">Wanna see some of our most <span class="highlight-three">delicious</span>
                     drinks?</h3>
             </div>
@@ -146,42 +144,42 @@
             <div class="drinks-content">
                 <ul class="drinks-list">
                     <li class="drink">
-                        <img src="./Images/americano.png" alt="Americano coffee drink.">
+                        <img src="./assets/americano.png" alt="Americano coffee drink.">
                         <h3 class="drink-title">Americano</h3>
                     </li>
 
                     <li class="drink">
-                        <img src="./Images/latte.png" alt="Latte coffee drink.">
+                        <img src="./assets/latte.png" alt="Latte coffee drink.">
                         <h3 class="drink-title">Latte</h3>
                     </li>
 
                     <li class="drink">
-                        <img src="./Images/coffee-machiatto.png" alt="Macchiato coffee drink.">
+                        <img src="./assets/coffee-machiatto.png" alt="Macchiato coffee drink.">
                         <h3 class="drink-title">Macchiato</h3>
                     </li>
 
                     <li class="drink">
-                        <img src="./Images/lungo.png" alt="Lungo coffee drink.">
+                        <img src="./assets/lungo.png" alt="Lungo coffee drink.">
                         <h3 class="drink-title">Lungo</h3>
                     </li>
 
                     <li class="drink">
-                        <img src="./Images/doppio.jpg" alt="Doppio coffee drink.">
+                        <img src="./assets/doppio.jpg" alt="Doppio coffee drink.">
                         <h3 class="drink-title">Doppio</h3>
                     </li>
 
                     <li class="drink">
-                        <img src="./Images/mocha.jpg" alt="Mocha coffee drink.">
+                        <img src="./assets/mocha.jpg" alt="Mocha coffee drink.">
                         <h3 class="drink-title">Mocha</h3>
                     </li>
 
                     <li class="drink">
-                        <img src="./Images/cappuccino.png" alt="Cappuccino coffee drink.">
+                        <img src="./assets/cappuccino.png" alt="Cappuccino coffee drink.">
                         <h3 class="drink-title">Cappuccino</h3>
                     </li>
 
                     <li class="drink">
-                        <img src="./Images/affogato.jpg" alt="Cappuccino coffee drink.">
+                        <img src="./assets/affogato.jpg" alt="Cappuccino coffee drink.">
                         <h3 class="drink-title">Affogato</h3>
                     </li>
                 </ul>
@@ -196,7 +194,7 @@
 
             <div class="slides">
                 <div class="slide active">
-                    <img class="slide-img" src="./Images/blueberry-bliss-3.jpg"
+                    <img class="slide-img" src="./assets/blueberry-bliss-3.jpg"
                         alt="Slide one image: Delicious creamy Cappuccino.">
 
                     <div class="slide-description-container">
@@ -210,7 +208,7 @@
                 </div>
 
                 <div class="slide">
-                    <img class="slide-img" src="./Images/twilight-elixir-3.jpg"
+                    <img class="slide-img" src="./assets/twilight-elixir-3.jpg"
                         alt="Slide one image: Delicious Affogato desert.">
 
                     <div class="slide-description-container">
@@ -226,7 +224,7 @@
                 </div>
 
                 <div class="slide">
-                    <img class="slide-img" src="./Images/sweet-love.jpg"
+                    <img class="slide-img" src="./assets/sweet-love.jpg"
                         alt="Slide one image: Delicious Mocha with foam.">
 
                     <div class="slide-description-container">
@@ -239,24 +237,6 @@
                         </p>
                     </div>
                 </div>
-            </div>
-
-            <div class="slider">
-                <button class="slider-button prev" aria-label="Previous slide">
-                    <i class="fa fa-chevron-left" aria-hidden="true"></i>
-                </button>
-
-                <ul class="slide-indicators">
-                    <li class="slide-indicator checked" aria-current="step"><input type="radio" id="slide-one"
-                            name="showcase-slide">
-                    </li>
-                    <li class="slide-indicator"><input type="radio" id="slide-two" name="showcase-slide"></li>
-                    <li class="slide-indicator"><input type="radio" id="slide-three" name="showcase-slide"></li>
-                </ul>
-
-                <button class="slider-button next" aria-label="Next slide">
-                    <i class="fa fa-chevron-right" aria-hidden="true"></i>
-                </button>
             </div>
         </section>
     </main>
