--- a/index.html
+++ b/index.html
@@ -2,17 +2,21 @@
 <html lang="en">
 
 <head>
+    <title>The Coffee Shop | Home</title>
+
+    <!-- Meta  -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Coffee Shop | Home</title>
     <meta name="description"
         content="Welcome to The Coffee Shop! We specialize in serving the best coffee drinks you will ever find. Visit us for a cozy atmosphere and a delightful coffee experience.">
     <meta name="keywords"
         content="coffee, cafe, The Coffee Shop, beverages, espresso, cappuccino, latte, coffee shop, cozy cafe, coffeehouse">
 
-    <!-- Icons and styles-->
+    <!-- Icons -->
     <script src="https://kit.fontawesome.com/1c689b6540.js" crossorigin="anonymous"></script>
     <link rel="icon" type="image/x-icon" href="./assets/logo.png">
+
+    <!-- Styles -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="./CSS/main-styles.css">
 </head>
@@ -304,6 +308,7 @@
         </nav>
     </footer>
 
+    <!-- JavaScript -->
     <script type="module" src="./JS/utils.js"></script>
     <script type="module" src="./JS/main-script.js"></script>
 </body>
